ng-grid.css
/******** Grid Global ********/
.nglabel {
    display: block;
    float: left;
    font-weight: bold;
    padding-right: 5px;
}
.ngNoSelect{
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
/******** Grid ********/

.ngGrid{
    background-color: rgb(253, 253, 253);
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

/******** Header ********/

.ngGroupPanel{
    background-color: rgb(234, 234, 234);
    overflow: hidden;
	border-bottom: 1px solid rgb(212,212,212);
}

.ngGroupPanelDescription{
	margin-top: 5px;
	margin-left: 5px;
}

.ngGroupList {
	list-style-type: none;
	margin: 0;
	padding: 0;
}

.ngGroupItem {
	float: left; 
}

.ngGroupElement {
	float: left;
	height: 100%; 
	width: 100%;
}

.ngGroupName {
    background-color: rgb(247,247,247);
    border: 1px solid rgb(212,212,212);
    padding: 3px 10px;
    float: left;
    margin-left: 0;
    margin-top: 2px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    border-radius: 3px;
    font-weight: bold;
}

.ngGroupItem:first-child{
	margin-left: 2px;
}

.ngRemoveGroup {
    width: 5px;
    float: right;
    -moz-opacity: 0.4;
    opacity: 0.4;
    margin-top: -1px;
    margin-left: 5px;
}
.ngRemoveGroup:hover {
    color: black;
    text-decoration: none;
    cursor: pointer;
    -moz-opacity: 0.7;
    opacity: 0.7;
}
.ngGroupArrow {
	width: 0; 
	height: 0; 
	border-top: 6px solid transparent;
	border-bottom: 6px solid transparent;
	border-left: 6px solid black;
	margin-top: 10px;
	margin-left: 5px;
	margin-right: 5px;
	float: right;
}

.ngTopPanel {
    position: relative;
    background-color: rgb(234, 234, 234);
	border-bottom: 1px solid rgb(212,212,212);
}
.ngHeaderContainer {
    position: relative;
    overflow: hidden;
    font-weight: bold;
}

.ngHeaderScroller {
	position:absolute;
}
.ngHeaderSortColumn{
	position:absolute;
    overflow: hidden;
	cursor: pointer;
}

.ngHeaderCell{
	border-left: 1px solid rgb(212,212,212);
    position: absolute;
    cursor: pointer;
}

.ngHeaderCell:first-child{
	border-left: 0px;
}

.ngHeaderCell:last-child{
	border-right: 1px solid rgb(212,212,212);
}

.ngSortButtonUp {
    position: absolute;
    top: 3px;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
	border-color: gray transparent;
	border-style: solid;
	border-width: 0 5px 5px 5px;
	height: 0;
	width: 0;
}
.ngSortButtonDown {
    position: absolute;
    top: 3px;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
	border-color: gray transparent;
	border-style: solid;
	border-width: 5px 5px 0 5px;
    height: 0;
	width: 0;
}
.ngHeaderGrip { 
    cursor: col-resize; 
    width: 10px; 
	right: -5px;
    top: 0; 
    height: 100%; 
    position: absolute; 
    z-index: 1000; 
}
.ngHeaderText {
    margin-left: 5px;
    white-space: nowrap;
    -ms-text-overflow: ellipsis;
    -o-text-overflow: ellipsis;
    text-overflow: ellipsis;
    overflow: hidden;
}

/******** Viewport ********/
.ngViewport{
    background-color: rgb(255, 255, 255);
	overflow: auto;
}

.ngCanvas{
    position: relative;
}

/******** Rows ********/
.ngRow {
    position: absolute;
    border-bottom: 1px solid rgb(229, 229, 229);
    cursor: pointer;
}
.ngRow.even {
    background-color: rgb(243, 243, 243);
}
.ngRow.odd {
    background-color: rgb(253, 253, 253);
}
.ngRow.selected {
    background-color: rgb(189, 208, 203);
}
.ngRow.canSelect {
    cursor: pointer;
}

/******** Cells ********/

.ngCell {
    overflow: hidden; 
    position: absolute;
	border-left: 1px solid rgb(212,212,212);
}

.ngCell:first-child{
	border-left: 0px;
}

.ngCell:last-child {
    border-right: 1px solid rgb(212,212,212);
}

.ngCellText {
    margin-left: 5px;
    margin-top: 5px;
    white-space: nowrap;
    -ms-text-overflow: ellipsis;
    -o-text-overflow: ellipsis;
    text-overflow: ellipsis;
    overflow: hidden;
}
.ngSelectionHeader {
	position: absolute;
    top: 11px; 
    left: 6px;
}
input[type="checkbox"] {
	margin: 0;
	padding: 0;
}
input {
	vertical-align:top;
}
.ngSelectionCell{
	margin-top: 9px;
	margin-left: 6px;
}
.ngNoSort {
    cursor:default;
}

/******** Footer ********/
.ngFooterPanel{
    background-color: rgb(234, 234, 234);
    padding: 0;
	border-top: 1px solid rgb(212,212,212);
	position: relative;
}
.ngTotalSelectContainer {
    float: left;
    margin: 5px;
    margin-top: 7px;
}
.ngFooterSelectedItems {
	padding: 2px;
}
.ngFooterTotalItems {
	padding: 2px;
}
.ngFooterTotalItems.ngnoMultiSelect {
    padding: 0 !important;
}

/* Aggregates */
.ngAggHeader {
    position: absolute;
    border: none;
}
.ngAggregate {
    position: absolute;
    background-color: rgb(179, 191, 188);
    border-bottom: 1px solid beige;
    top: 0;
    bottom: 0;
    right: -1px;
	left: 0;
}
.ngAggregateText {
    position: absolute;
    left: 27px;
	top: 5px;
    line-height: 20px;
}
.ngAggArrowExpanded {
    position: absolute;
    left: 8px;
    bottom: 10px;
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 0 0 9px 9px;
    border-color: transparent transparent #000000 transparent;
}
.ngAggArrowCollapsed {
    position: absolute;
    left: 8px;
    bottom: 10px;
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 5px 0 5px 8.7px;
    border-color: transparent transparent transparent #000000;
}

.ngHeaderButton {
    position: absolute;    
    right: 2px;
    top: 8px;
    -moz-border-radius: 50%;
    -webkit-border-radius: 50%;
    border-radius: 50%;
    width: 14px;
    height: 14px;
    z-index: 10000;
    background-color: rgb(179, 191, 188);
    cursor: pointer;
    /* width and height can be anything, as long as they're equal */
}
.ngHeaderButtonArrow {
    position: absolute;
    top: 4px;
    left: 3px;
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 6.5px 4.5px 0 4.5px;
    border-color: #000 transparent transparent transparent;
    /* width and height can be anything, as long as they're equal */
}
.ngColMenu {
    top: 15px;
    background-color: rgb(189, 208, 203);
    position: absolute;
    display: inline-block;
    -moz-box-shadow: 5px 5px 5px #666;
    -webkit-box-shadow: 5px 5px 5px #666;
    box-shadow: 5px 5px 5px #666;
    z-index: 50000;
}
.ngColList {
    list-style-type: none;
}

.ngColListItem {
    position: relative;
    right: 17px;
    top: 2px;
    white-space:nowrap;
}
.ngColListCheckbox {
    position: relative;
    right: 3px;
    top: 4px;
}

